2004-05-16  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: use safer library referencing

2004-04-06  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: kill DockObject.custom
	* DockObject.custom: kill in favor of metadata rule
	* Gdl.metadata: unhide GdlDockObject.Present and mark child param null_ok

2004-03-28  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: this should be more forgiving

2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: cleanup, and make it run only once
