@@ -1,3 +1,8 @@
+2004-10-16  John Luke  <john.luke@gmail.com>
+
+	* Makefile.am: remove MCS use $(CSC) from configure.in,
+	allows make CSC=foo to work consistently
+
 2004-09-25  Todd Berman  <tberman@off.net>
 
 	* FileBrowser/FileBrowser.cs: Use a ArrayList instead of a Hashtable
